fixed: fixed health check api / 241031 / complete